fixing broken styles in dash

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,6 +150,10 @@ body {
     color: var(--light)
 }
 
+#select-delete-dropdown {
+    width: 50vw
+}
+
 /* DadCreate Styles */
 .createimg{
     height: 25vw;
